bloonix-plugins-wtrm (0.7) released at 2015-02-12

    * New feature: it's now possible to search for tags and attributes.

bloonix-plugins-wtrm (0.6) released at 2014-12-05

    * Ignoring "Unsafe JavaScript attempt" messages of PhantomJS.

bloonix-plugins-wtrm (0.5) released at 2014-12-04

    * Fixed doSleep function.

bloonix-plugins-wtrm (0.4) released at 2014-12-03

    * Fixed UA setting in bloonix-wtrm.js.
    * Fixed the check checkUrl.

bloonix-plugins-wtrm (0.3) released at 2014-11-26

    * Install bloonix-wtrm.js.
    * First RPM and DEB package.

bloonix-plugins-wtrm (0.2) released at 2014-11-03

    * Updated the license information.

bloonix-plugins-wtrm (0.1) released at 2014-04-18

    * Initial release.