@@ -1,3 +1,7 @@
+bloonix-plugins-wtrm (0.8) released at 2015-02-12
+
+    * New feature: doWaitForElement can now wait for text within an element too.
+
 bloonix-plugins-wtrm (0.7) released at 2015-02-12
 
     * New feature: it's now possible to search for tags and attributes.
